# wasm-tools

./: Cargo.toml
crates/wasm-compose/: Cargo.toml  GRAMMAR.md
crates/wasm-compose/example/: service.wit
crates/wasm-compose/fuzz/: Cargo.toml
crates/wasm-compose/fuzz/fuzz_targets/: parse.rs
crates/wasm-compose/src/: cli.rs  composer.rs  document.rs  graph.rs  lib.rs
crates/wasm-compose/src/document/: build.rs  error.rs  parse.rs  token.rs
crates/wit-component/src/: decoding.rs  metadata.rs
crates/wit-parser/: Cargo.toml
crates/wit-parser/src/: ast.rs  def.rs  lib.rs  resolve.rs
crates/wit-parser/src/ast/: lex.rs  resolve.rs
